@@ -8,6 +8,16 @@
     <version>3.0-SNAPSHOT</version>
     <name>Samurai</name>
     <url>http://samuraism.jp/samurai/</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
+        <!--        <jpackager.executable>${project.basedir}/jdk.packager/jpackager</jpackager.executable>-->
+        <jpackager.icon>${project.basedir}/package/Shogun.icns</jpackager.icon>
+    </properties>
+
     <licenses>
         <license>
             <name>Apache License 2.0</name>
@@ -66,7 +76,7 @@
                     <source>11</source>
                     <target>11</target>
                     <compilerArgs>
-                        <arg>--add-exports</arg><arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -91,6 +101,68 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <id>create-package</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jpackage</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <longModulepath>false</longModulepath>
+                            <environmentVariables>
+                                <JAVA_HOME>${java.home}</JAVA_HOME>
+                            </environmentVariables>
+                            <arguments>
+                                <argument>--verbose</argument>
+                                <argument>--java-options</argument>
+                                <argument>-Xmx128m -Xms128m -XX:+UseSerialGC -Xverify:none
+                                    -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+                                    -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+                                </argument>
+                                <argument>--copyright</argument>
+                                <argument>Yusuke Yamamoto</argument>
+                                <argument>--vendor</argument>
+                                <argument>Yusuke Yamamoto</argument>
+                                <argument>--icon</argument>
+                                <argument>${project.basedir}/package/Shogun.icns</argument>
+                                <argument>--input</argument>
+                                <argument>${project.build.directory}/</argument>
+                                <argument>--main-class</argument>
+                                <argument>samurai.swing.Samurai</argument>
+                                <argument>--main-jar</argument>
+                                <argument>./${project.artifactId}-${project.version}.jar</argument>
+                                <argument>--dest</argument>
+                                <argument>./</argument>
+                                <argument>--mac-package-identifier</argument>
+                                <argument>samurai.swing.Samurai</argument>
+                                <argument>--mac-signing-key-user-name</argument>
+                                <argument>Yusuke Yamamoto (TX2Q55XRF7)</argument>
+                                <argument>--mac-sign</argument>
+                                <argument>--mac-entitlements</argument>
+                                <argument>${project.basedir}/package/entitlement.plist</argument>
+                                <argument>--name</argument>
+                                <argument>Samurai</argument>
+                                <argument>--add-modules</argument>
+                                <argument>java.base,java.desktop,java.naming,jdk.internal.jvmstat,jdk.attach</argument>
+                                <argument>--jlink-options</argument>
+                                <argument>--strip-native-commands</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
             </plugin>
         </plugins>
     </build>
